--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,88 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QnS-0T-esb">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="MemeMe" id="E6P-bF-eNE">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="GDK-fE-EQ3">
+                                            <connections>
+                                                <action selector="shareMeme:" destination="BYZ-38-t0r" id="hWB-Ch-u2z"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Cancel" id="W0Q-V6-C6K">
+                                            <connections>
+                                                <action selector="cancelAction:" destination="BYZ-38-t0r" id="8Od-EQ-cb4"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fih-am-mqE">
+                                <rect key="frame" x="0.0" y="64" width="600" height="492"/>
+                                <color key="backgroundColor" red="1" green="0.89899377824126758" blue="0.19359926286323004" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oyc-IR-71G" userLabel="Top Text Field">
+                                <rect key="frame" x="66" y="89" width="468" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y6o-yd-8Pw" userLabel="Bottom Text Field">
+                                <rect key="frame" x="66" y="485" width="468" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="azO-2s-gHb">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="camera" id="msD-5a-uGK">
+                                        <connections>
+                                            <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="oUy-dn-9bg"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="Album" id="Eom-rD-4c3">
+                                        <connections>
+                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="WcF-19-lNn"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Fih-am-mqE" secondAttribute="trailing" constant="-20" id="3UB-fE-DKk"/>
+                            <constraint firstItem="oyc-IR-71G" firstAttribute="leading" secondItem="Fih-am-mqE" secondAttribute="leading" constant="66" id="6GB-Kn-6yW"/>
+                            <constraint firstItem="azO-2s-gHb" firstAttribute="top" secondItem="Fih-am-mqE" secondAttribute="bottom" id="6ac-rO-jng"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QnS-0T-esb" secondAttribute="trailing" constant="-20" id="EMo-Ys-IwL"/>
+                            <constraint firstItem="Y6o-yd-8Pw" firstAttribute="leading" secondItem="Fih-am-mqE" secondAttribute="leading" constant="66" id="RiB-Pd-SEK"/>
+                            <constraint firstItem="Fih-am-mqE" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="64" id="WMC-CX-ghg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="azO-2s-gHb" secondAttribute="trailing" constant="-20" id="bds-E2-Pob"/>
+                            <constraint firstItem="Y6o-yd-8Pw" firstAttribute="top" secondItem="Fih-am-mqE" secondAttribute="bottom" priority="250" constant="-71" id="eTr-U0-PVh"/>
+                            <constraint firstItem="azO-2s-gHb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="ee0-FV-Gsx"/>
+                            <constraint firstItem="Fih-am-mqE" firstAttribute="top" secondItem="oyc-IR-71G" secondAttribute="bottom" priority="250" constant="-42" id="et7-M8-Nhg"/>
+                            <constraint firstItem="QnS-0T-esb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="gyx-qD-iJO"/>
+                            <constraint firstItem="Fih-am-mqE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="hGG-c8-npp"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="azO-2s-gHb" secondAttribute="bottom" id="l9R-TV-Xk4"/>
+                            <constraint firstItem="QnS-0T-esb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="tC1-Yn-T5J"/>
+                            <constraint firstItem="oyc-IR-71G" firstAttribute="trailing" secondItem="Fih-am-mqE" secondAttribute="trailing" constant="-66" id="tHf-x3-v1I"/>
+                            <constraint firstItem="Y6o-yd-8Pw" firstAttribute="trailing" secondItem="Fih-am-mqE" secondAttribute="trailing" constant="-66" id="vxg-kj-5XH"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bottomTextField" destination="Y6o-yd-8Pw" id="Wof-tI-yxS"/>
+                        <outlet property="cameraButton" destination="msD-5a-uGK" id="HzT-te-pou"/>
+                        <outlet property="image" destination="Fih-am-mqE" id="ShH-2l-rWh"/>
+                        <outlet property="imagePickerView" destination="Fih-am-mqE" id="v9b-tX-wkL"/>
+                        <outlet property="navigationBar" destination="QnS-0T-esb" id="nJg-lg-ctZ"/>
+                        <outlet property="shareButton" destination="GDK-fE-EQ3" id="GVx-r9-cDy"/>
+                        <outlet property="toolBar" destination="azO-2s-gHb" id="Jf6-Qn-pUa"/>
+                        <outlet property="topTextField" destination="oyc-IR-71G" id="Tfq-9D-Izf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="387"/>
         </scene>
     </scenes>
 </document>
